--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,12 @@
 name: Github Actions Debug
 
 on:
-  pull-request:
   push:
     branches: 
+      - develop
+  pull_request:
+    branches:
+      - master
       - develop
 
 jobs:
