--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,6 +23,6 @@ jobs:
     - name: List all container   #remove this step once you're done investigating
       run: docker ps
     - name: Run tests from the built image
-      run: docker run survey-form sh -c "npm test"
+      run: docker run debug-docker sh -c "npm test"
     - name: Compose down the docker
       run: docker-compose -f "docker-compose.yml" down
